--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
 	<title>Xylos Network - Official Website</title>
-	<meta name="description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.myserver.net'.">
-	<meta property="og:title" content="MyServer - Official Website Portal">
-	<meta property="og:site_name" content="MyServer">
+	<meta name="description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.xylosnetworkmc.my.id'.">
+	<meta property="og:title" content="Xylos Network - Official Website Portal">
+	<meta property="og:site_name" content="Xylos Network">
 	<meta property="og:description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.myserver.net'.">
-	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
-	<meta property="og:url" content="https://bybilly.uk/">
+	<meta property="og:image" content="https://www.xylosnetworkmc.my.id/">
+	<meta property="og:url" content="https://www.xylosnetworkmc.my.id/">
 	<meta name="twitter:card" content="summary_large_image">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
