--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.xylosnetworkmc.my.id'.">
 	<meta property="og:title" content="Xylos Network - Official Website Portal">
 	<meta property="og:site_name" content="Xylos Network">
-	<meta property="og:description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.myserver.net'.">
+	<meta property="og:description" content="Xylos Network is a new and awesome Minecraft server. You can join with the IP 'play.xylosnetworkmc.my.id'.">
 	<meta property="og:image" content="https://www.xylosnetworkmc.my.id/">
 	<meta property="og:url" content="https://www.xylosnetworkmc.my.id/">
 	<meta name="twitter:card" content="summary_large_image">
