--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@
 
 		</div>
 
-		<div class="playercount">
-			<!-- Replace play.cubecraft.net with your server IP address -->
-			<!-- Do it on both line 66 and line 67 -->
-			<!-- Please set both your IP and port -->
-			<p><span class="sip"
-			</span><span class="ip">Sponsored By My Store</span></p>
-		</div>
-	</div>
-
+					<!-- Replace # with your vote URL -->
+			<a href="https://minecraftpocket-servers.com/server/116591/" class="item vote">
+			<div>
+				<img src="img/vote.png" alt="Minecraft voting icon" class="img">
+				<p class="subtitle">support us by</p>
+				<p class="title">Voting</p>
+			</div>
+			</a>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="js/firefly.js" type="text/javascript"></script>
