--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@
 
 		</div>
 
-					<!-- Replace # with your vote URL -->
-			<a href="https://minecraftpocket-servers.com/server/116591/" class="item vote">
-			<div>
-				<img src="img/vote.png" alt="Minecraft voting icon" class="img">
-				<p class="subtitle">support us by</p>
-				<p class="title">Voting</p>
-			</div>
-			</a>
-
+                <div class="playercount">
+			<!-- Replace play.cubecraft.net with your server IP address -->
+			<!-- Do it on both line 66 and line 67 -->
+			<!-- Please set both your IP and port -->
+			<p>Join <span class="sip" data-ip="159.223.82.190" data-port="19132">
+			</span> other players on <span class="ip">play.xylosnetworkmc.my.id</span></p>
+		</div>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="js/firefly.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
