--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			<!-- Replace play.cubecraft.net with your server IP address -->
 			<!-- Do it on both line 66 and line 67 -->
 			<!-- Please set both your IP and port -->
-			<p>Join <span class="sip" data-ip="159.223.82.190" data-port="19132">
-			</span> other players on <span class="ip">play.xylosnetworkmc.my.id</span></p>
+			<p> <span class="sip"
+			</span>  <span class="ip">Sponsored By My Store :)</span></p>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
