--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</a>
 
 			<!-- Replace # with your store URL -->
-			<a href="minecraft://?addExternalServer=§6Xylos%20§cNetwork|mc.xylosnetworkmc.my.id:25576" class="item store">
+			<a href="minecraft://?addExternalServer=§6Xylos%20§cNetwork|play.xylosnetworkmc.my.id:19132" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
 				<p class="subtitle">Go Play, Click Below</p>
