--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <html>
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
-	<title>Xylos Network - Official Website</title>
-	<meta name="description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.xylosnetworkmc.my.id'.">
-	<meta property="og:title" content="Xylos Network - Official Website Portal">
-	<meta property="og:site_name" content="Xylos Network">
-	<meta property="og:description" content="Xylos Network is a new and awesome Minecraft server. You can join with the IP 'play.xylosnetworkmc.my.id'.">
-	<meta property="og:image" content="https://www.xylosnetworkmc.my.id/">
-	<meta property="og:url" content="https://www.xylosnetworkmc.my.id/">
+	<title>Nichi Network - Official Website</title>
+	<meta name="description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.nichiwamc.my.to'.">
+	<meta property="og:title" content="Nichiwa Network - Official Website Portal">
+	<meta property="og:site_name" content="Nichiwa Network">
+	<meta property="og:description" content="Nichiwa Network is a new and awesome Minecraft server. You can join with the IP 'play.xylosnetworkmc.my.id'.">
+	<meta property="og:image" content="https://www.nichiwamc.my.to/">
+	<meta property="og:url" content="https://www.nichiwamc.my.to/
 	<meta name="twitter:card" content="summary_large_image">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
 
 		<div class="items">
 			<!-- Replace # with your forum URL-->
-			<a href="https://chat.whatsapp.com/J6Bvr6MRvP8Ka9vG8FriwU" class="item forums">
+			<a href="https://chat.whatsapp.com/Ly1qPqtOARSBCX7ltNxayO" class="item forums">
 			<div>
 				<img src="img/forums.png" alt="Minecraft forums icon" class="img">
 				<p class="subtitle">chat on our</p>
@@ -40,7 +40,7 @@
 			</a>
 
 			<!-- Replace # with your store URL -->
-			<a href="minecraft://?addExternalServer=§6Xylos%20§cNetwork|play.xylosnetworkmc.my.id:19132" class="item store">
+			<a href="minecraft://?addExternalServer=§6Nichiwa%20§cNetwork|play.nichiwamc.my.to:19132" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
 				<p class="subtitle">Go Play, Click Below</p>
@@ -63,7 +63,7 @@
 			<!-- Do it on both line 66 and line 67 -->
 			<!-- Please set both your IP and port -->
 			<p>Join <span class="sip" data-ip="159.223.82.190" data-port="19132">
-			</span> other players on <span class="ip">play.xylosnetworkmc.my.id</span></p>
+			</span> other players on <span class="ip">play.nichiwamc.my.to</span></p>
 		</div>
 	</div>
         
