--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
-	<title>Nichi Network - Official Website</title>
+	<title>Nichiwa Network - Official Website</title>
 	<meta name="description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.nichiwamc.my.to'.">
 	<meta property="og:title" content="Nichiwa Network - Official Website Portal">
 	<meta property="og:site_name" content="Nichiwa Network">
